# PREDICT_PROJECT

./: .gitignore  README.md  manual.md  pyproject.toml
PYTHON_PREDICT/: calendar_actions.py  config.py  dropbox_actions.py  exe_init_compet.py  exe_init_snowflake.py  exe_main.py  exe_output.json  exe_playoffs_table.py  get_game_details_lnb.py  message_actions.py  output_need_actions.py  snowflake_actions.py
PYTHON_TESTS/: test_calendar_actions.py  test_calendar_actions_edgecases.py  test_config.py  test_config_edgecases.py  test_dropbox_actions.py  test_dropbox_actions_edgecases.py  test_exe_init_compet.py  test_exe_init_compet_edgecases.py  test_exe_init_snowflake.py  test_exe_init_snowflake_edgecases.py  test_exe_main.py  test_exe_main_edgecases.py  test_exe_playoffs_table.py  test_exe_playoffs_table_edgecases.py  test_file_actions.py  test_file_actions_edgecases.py  test_game_actions.py  test_game_actions_edgecases.py  test_get_game_details_lnb.py  test_get_game_details_lnb_edgecases.py  test_get_messages_details_bi.py  test_get_messages_details_bi_edgecases.py  test_imgbb_actions.py  test_imgbb_actions_edgecases.py  test_message_actions.py  test_message_actions_edgecases.py  test_output_message_actions.py  test_output_message_actions_calculated.py  test_output_message_actions_calculated_edgecases.py  test_output_message_actions_edgecases.py  test_output_message_actions_inited.py  test_output_message_actions_inited_edgecases.py  test_output_need_actions.py  test_output_need_actions_edgecases.py  test_post_messages_bi.py  test_post_messages_bi_edgecases.py  (+3 more)
(+277 files in other folders)
