[project]
name = "predict-sports-forums"
version = "1.0.0"
description = "Package to run prediction on forums"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.2.3",
    "snowflake-connector-python[pandas]>=3.17.2",
    "sqlglot>=27.20.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "requests>=2.32.3",
    "networkx>=3.4.2",
    "beautifulsoup4>=4.12.3",
    "Pillow>=11.1.0",
    "dbt-core>=1.9.0",
    "dbt-snowflake>=1.9.0",
    # FIX: Pin pathspec to a version < 0.13
    "pathspec>=0.9,<0.13", 
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black",
    "mypy",
    "types-requests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests_*.py", "test_*.py"]
python_functions = ["test_*"]
addopts = "-v"